--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "nodemon server.js",
-    "start:prod": "nodemon server.js",
-    "debug": "NODE_ENV=production node --inspect server.js",
+    "start:prod": "NODE_ENV=production nodemon server.js",
+    "debug": "node --inspect server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
     "build:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
   },
@@ -33,13 +33,14 @@
     "hpp": "^0.2.3",
     "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.14",
+    "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.7.5",
     "pug": "^3.0.2",
     "sharp": "^0.30.7",
     "slugify": "^1.6.5",
+    "stripe": "^7.0.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   },
@@ -52,7 +53,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.30.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel-bundler": "^1.3.1",
     "prettier": "^2.6.2"
   },
   "engines": {
